--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,11 +1,9 @@
-# See https://pre-commit.com for more information
-# See https://pre-commit.com/hooks.html for more hooks
 repos:
   - repo: https://github.com/psf/black
     rev: 23.3.0
     hooks:
       - id: black
-#        exclude: tests/
+        exclude: tests/
         language_version: python3.11
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.4.0
@@ -14,7 +12,7 @@ repos:
       - id: end-of-file-fixer
       - id: check-yaml
       - id: check-added-large-files
-#        exclude: ^tests/
+        exclude: tests/
   - repo: https://github.com/pycqa/isort
     rev: 5.12.0
     hooks:
@@ -29,16 +27,15 @@ repos:
     rev: 6.0.0
     hooks:
       - id: flake8
-#        additional_dependencies:
-#          - flake8-bugbear
-#          - flake8-builtins
-#          - flake8-coding
-#          - flake8-import-order
-#          - flake8-polyfill
-#          - flake8-quotes
+        additional_dependencies:
+          - flake8-bugbear
+          - flake8-builtins
+          - flake8-coding
+          - flake8-import-order
+          - flake8-polyfill
+          - flake8-quotes
   - repo: https://github.com/pre-commit/mirrors-mypy
     rev: 'v1.3.0'
     hooks:
       - id: mypy
-#        exclude: ^(docs/|example-plugin/)
         additional_dependencies: [types-requests, types-PyYAML, types-toml]
